# superpowers-x

./: AGENTS-template.md  README.md
agents/: plan-reviewer.md  spec-reviewer.md
clang-format/c/: .clang-format
hooks/: hooks.json
rules/: behavioral-guidelines.mdc  cross-compilation-workflow.mdc
skills/brainstorming/: SKILL.md
skills/executing-plans/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/git-commit/: SKILL.md
skills/git-tag/: SKILL.md
skills/git-workflow/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/verification-before-completion/: SKILL.md
skills/writing-linux-c-complex-app/: SKILL.md
skills/writing-linux-c-complex-app/complex-app/: CMakeLists.txt  README.md
skills/writing-linux-c-complex-app/complex-app/cmake/: thirdparty.cmake
skills/writing-linux-c-complex-app/complex-app/configs/: app.debug.toml  app.release.toml
skills/writing-linux-c-complex-app/complex-app/src/: main.c
skills/writing-linux-c-complex-app/complex-app/src/app/: app.c  app.h
skills/writing-linux-c-complex-app/complex-app/src/config/: config.c  config.h
skills/writing-plans/: SKILL.md
